Updated milgram's (previously nonexistent) damage tables to make him hard to cheese with lightweight attacks, since his hitpoints got massively lowered recently.

--- a/data/objects/enemies/bosses/milgram.cfg
+++ b/data/objects/enemies/bosses/milgram.cfg
@@ -15,40 +15,57 @@ properties: {
 			set_max_hitpoints({casual: standard_thrown_damage * 16, challenging: standard_thrown_damage * 28}),
 		]",
 
-	flinch_threshold: "99999999",
-	points_value: 10000,
-	armor: "40",
-	taxonomy: "TaxonomyType :: enum neutral",
-	team: "'evil'",
-	attack_damage: "if(higher_difficulty,3,2)",
-	
-	title: "~Milgram~",
-	description: "~We originally meant for Milgram to be a reference to the psychologist Stanley Milgram. He had an awesome tilting airship that you fought him on! Or... at least a mockup of one. He was the mid-boss. We'd slated the final boss to be Skizzix, who was the embodiment of literally all the evil in the world. He'd been sealed away by a cult a several hundred years prior to rid the world of all evil.~",
-	taste: "''", //cut for size "~Dignity and a hint of Earl Grey tea.~",
-	
-	choose_action: "if(size(_action_queue) > 0,[set(me.animation, (string <- head(_action_queue))), set(_action_queue, if(lib.standardize.tail(_action_queue), ([string] <- lib.standardize.tail(_action_queue)), populate_action_queue))], set(_action_queue,populate_action_queue))",
-	
-	populate_action_queue: "[string] ::shuffle(	(['charge_homing'] * 3) + 
-												(['charge_missile'] * if(higher_difficulty,3,1)) +
-												(['charge_jump'] * if(higher_difficulty,1,3)) +
-												(['walk'] * if(higher_difficulty,3,6)))",
-	desired_facing: "if(level.player.mid_x < mid_x, -1, 1)",
-	handle_knockback: "def(obj hittable collide_with) -> commands null",
-	charge_duration: "30",
-	springiness: "140",
-	is_a_boss: { default: true },
-	play_object_specific_pain_vocalization: "def(DamageType damage_type, damage_amount) -> commands play_sound__falloff('voice-milgram-hurt')",
-	
 
-	handle_death: "def(interface {damage_type: DamageType} collide_with) -> commands [
-			fire_event(controller, 'end_fight'),
-	        spawn('explosion_big_recurring',  midpoint_x, midpoint_y, facing),
-	        map(filter(level.chars, value.type in ['milgram_block', 'milgram.ground_slash', 'milgram.guided_missile', 'milgram.energy_shot']), remove_object(value)),
-] where controller = get_object_or_die(level,'milgram_controller')",
 
-#-------------------------- vars --------------------------#
-	_charge_counter: { type: "int", default: 0, persistent: false },
-	_action_queue: { type: "[string]", default: [], persistent: false },
+	#-------------------------- hittable overrides --------------------------#
+		custom_damage_table: "{
+			enum neutral: 1.0,
+			enum fire: 0.3,
+			enum energy: 1.0,
+			enum arcane: 1.0,
+			enum acid: 0.0,
+			enum impact: 1.0,
+			enum impale: 1.0,
+			enum lacerate: 1.0
+		}",
+		armor: "40",
+
+
+		flinch_threshold: "99999999",
+		taxonomy: "TaxonomyType :: enum neutral",
+		team: "'evil'",
+		attack_damage: "if(higher_difficulty,3,2)",
+		
+		title: "~Milgram~",
+		description: "~We originally meant for Milgram to be a reference to the psychologist Stanley Milgram. He had an awesome tilting airship that you fought him on! Or... at least a mockup of one. He was the mid-boss. We'd slated the final boss to be Skizzix, who was the embodiment of literally all the evil in the world. He'd been sealed away by a cult a several hundred years prior to rid the world of all evil.~",
+		taste: "''", //cut for size "~Dignity and a hint of Earl Grey tea.~",
+		
+		desired_facing: "if(level.player.mid_x < mid_x, -1, 1)",
+		handle_knockback: "def(obj hittable collide_with) -> commands null",
+		charge_duration: "30",
+		springiness: "140",
+		is_a_boss: { default: true },
+		play_object_specific_pain_vocalization: "def(DamageType damage_type, damage_amount) -> commands play_sound__falloff('voice-milgram-hurt')",
+		
+
+		handle_death: "def(interface {damage_type: DamageType} collide_with) -> commands [
+				fire_event(controller, 'end_fight'),
+				spawn('explosion_big_recurring',  midpoint_x, midpoint_y, facing),
+				map(filter(level.chars, value.type in ['milgram_block', 'milgram.ground_slash', 'milgram.guided_missile', 'milgram.energy_shot']), remove_object(value)),
+		] where controller = get_object_or_die(level,'milgram_controller')",
+
+
+	#-------------------------- custom behavior --------------------------#
+		choose_action: "if(size(_action_queue) > 0,[set(me.animation, (string <- head(_action_queue))), set(_action_queue, if(lib.standardize.tail(_action_queue), ([string] <- lib.standardize.tail(_action_queue)), populate_action_queue))], set(_action_queue,populate_action_queue))",
+		
+		populate_action_queue: "[string] ::shuffle(	(['charge_homing'] * 3) + 
+													(['charge_missile'] * if(higher_difficulty,3,1)) +
+													(['charge_jump'] * if(higher_difficulty,1,3)) +
+													(['walk'] * if(higher_difficulty,3,6)))",
+
+	#-------------------------- vars --------------------------#
+		_charge_counter: { type: "int", default: 0, persistent: false },
+		_action_queue: { type: "[string]", default: [], persistent: false },
 },
 
 
