Revert "Made GUI not scale while fading in/out, it was just a hack."  This was actually desired behavior we spent about 20 hours tweaking to get right, so even though it was originally a hack that we'd used to make the widget-based UI disappear, it had only been discovered becuase it was something we were trying to willfully do.
This reverts commit 3830153b753548d541686ac513e82f9a1b5c47d0.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -1563,7 +1563,7 @@ properties: {
 
 	fade_out_hud: "[
 		[
-			animate(c, { alpha_proxy: 0 }, { duration: 10, easing: lib.math.ease_in_out_cubic }) 
+			animate(c, { alpha_proxy: 0, scale: 1.0/(level.zoom * 2) }, { duration: 10, easing: lib.math.ease_in_out_cubic }) 
 			| c <- level.chars, (c is obj hud_component and (not c.type in hud_types_omitted_from_scaling))
 		],
 		[
@@ -1575,7 +1575,7 @@ properties: {
 	
 	instantly_hide_hud: "[
 		[
-			[set(c.alpha_proxy, 0)]
+			[set(c.alpha_proxy, 0), set(c.scale, 0)]
 			| c <- level.chars, (c is obj hud_component and (not c.type in hud_types_omitted_from_scaling))
 		],
 		[
@@ -1587,7 +1587,7 @@ properties: {
 	
 	fade_in_hud:  "commands :: [
 		[
-			animate(c, { alpha_proxy: 255 }, { duration: 20, easing: lib.math.ease_in_out_cubic }) 
+			animate(c, { alpha_proxy: 255, scale: 1 }, { duration: 20, easing: lib.math.ease_in_out_cubic }) 
 			| c <- level.chars, (c is obj hud_component and (not c.type in hud_types_omitted_from_scaling))
 		],
 		[
@@ -1598,7 +1598,7 @@ properties: {
 	
 	instantly_show_hud:  "commands :: [
 		[
-			[set(c.alpha_proxy, 255)]
+			[set(c.alpha_proxy, 255), set(c.scale, 1)]
 			| c <- level.chars, (c is obj hud_component and (not c.type in hud_types_omitted_from_scaling))
 		],
 		[
