--- a/data/classes/pseudo_random_numbers.cfg
+++ b/data/classes/pseudo_random_numbers.cfg
@@ -3,16 +3,47 @@
 							 asserting _size_of_pool > 0 and _pool_size_multiplier > 0 | 'The PRNG cannot generate any numbers if the pool of random rolls is empty; both constructor arguments have to be greater than zero.'",
 
 	_current_pool: {type: "[int]", default: []},
-	_size_of_pool: {type: "int", default: 0},
-	_pool_size_multiplier: {type: "int", default: 2},  //more variants allows for more randomness runs in a given chunk of time 
+	_previous_pool: {type: "[int]", default: []}, //because values are 'peeled off' the deck one by one, we need a separate copy if we want to query the entire prior run.
 
+	_size_of_pool: {type: "int", default: 0},
+	_pool_size_multiplier: {type: "int", default: 2},  //basically deal multiple copies of the same 'deck of cards'
 	
 	_last: "def([int] list) -> int list[size(list)-1] asserting size(list) > 0",
 	
 	get_next_value: "_last(_current_pool)",
 	iterate_random_pool: "if(size(_current_pool) > 1, shrink_pool_by_one, create_next_pool(_size_of_pool, _pool_size_multiplier))",
 	shrink_pool_by_one: "set(_current_pool, _current_pool[0 : size(_current_pool) - 1])",
-	create_next_pool: "def(int pool_size, int pool_size_mult) -> commands [set(_current_pool, shuffle(range(pool_size) * pool_size_mult)), set(_size_of_pool, pool_size)]",
+
+
+	get_naive_next_pool: "def(int pool_size, int pool_size_mult) -> [int]
+		shuffle(range(pool_size) * pool_size_mult)
+	",
+	get_non_repeating_next_pool: "def(int pool_size, int pool_size_mult) -> [int]
+		/*
+			We're doing some real funny-business here, compared to the old `get_naive_next_pool` function.   The intention is to prevent a common occurrence with deck shuffles, where it's possible for the 'final item' of the current shuffle to match the 'first item' of the next shuffle.   I.e. if you have [3 2 1] [1 2 3], then you have two instances of [1] back-to-back.
+
+			What we have to do breaks the generality a bit, but basically instead of just doing a cheap 'build one copy of the new deck and multiply it by the number of decks in the shuffle', instead we manually build the very first deck in the shuffle.  We make sure the first card cannot be the offending card, and then we build the rest of the first deck.
+		*/
+	(
+		new_first_deck + shuffle(range(pool_size) * (pool_size_mult - 1))
+	)
+		where new_first_deck = [new_first_card] + shuffle(filter(range(pool_size), not value = new_first_card))
+		where new_first_card = shuffle(filter(range(pool_size), not value = offending_card))[0]
+		where offending_card = _last(_previous_pool)
+	",
+
+	create_next_pool: "def(int pool_size, int pool_size_mult) -> commands
+
+	[
+		set(_current_pool, next_pool),
+		set(_previous_pool, next_pool),
+		set(_size_of_pool, pool_size),
+	]
+		where next_pool = if( size(_current_pool) = 0,
+			get_naive_next_pool(pool_size, pool_size_mult),
+			get_non_repeating_next_pool(pool_size, pool_size_mult)
+		)
+	",
 
 	init_pool: 	"def( {pool_size: int, pool_depth: int} args ) -> commands [create_next_pool(args.pool_size, args.pool_depth), set(_pool_size_multiplier, args.pool_depth)]",
 	
