--- a/data/level/Cave/hanging-platforms.cfg
+++ b/data/level/Cave/hanging-platforms.cfg
@@ -784,8 +784,9 @@
 			"label": "_d1bb1a4",
 			"property_data": {
 				"_move_x1": 512,
-				"_move_y1": 2499,
+				"_move_y1": 2464,
 				"_move_y2": 2157,
+				"actual_speed": 0.977196,
 				"is_zipline": true,
 				"rope_height": 28,
 				"stopped": 0,
@@ -2303,12 +2304,12 @@
 			"custom": true,
 			"label": "_7bf120c9",
 			"property_data": {
-				"shadow_opacity": 0.6,
 				"shadow_color": {
-					"r": 0.027451,
+					"b": 0.090196,
 					"g": 0.0,
-					"b": 0.090196
-				}
+					"r": 0.027451
+				},
+				"shadow_opacity": 0.6
 			},
 			"type": "shadow_effect_controller",
 			"x": 437,
@@ -2934,16 +2935,6 @@ nbr,nbr,nbr,nbr,nbr,nbr,,,,,,,nbr,nbr,nbr,nbr,,,,,,,nbr,nbr,nbr,nbr
 			"y": -480,
 			"y_speed": 100,
 			"zorder": "wooden_scaffolding_background"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "player"
 		},
 		{
 			"tiles": "",
