reproduction on test.cfg/test2.cfg for Frogatto #634, "ug with attaches upon using moth bomb".

--- a/data/level/Unused/Test/test.cfg
+++ b/data/level/Unused/Test/test.cfg
@@ -4,6 +4,8 @@
 	"background": "arcade",
 	"background_offset": [0,0],
 	"background_palette": "seaside_sunny",
+	"next_level": "test2.cfg",
+	"previous_level": "test2.cfg",
 	"character": [
 		{
 			"_uuid": "d6c5f74a141647028672f1503f28b494",
@@ -19,8 +21,8 @@
 				"original_level_we_spawned_on": "test.cfg"
 			},
 			"type": "frogatto_playable",
-			"x": 2592,
-			"y": -1600
+			"x": 4128,
+			"y": -160
 		},
 		{
 			"_uuid": "33d4e962353c4dffadf1b91069297859",
@@ -37,28 +39,9 @@
 			"type": "water_controller",
 			"x": 3584,
 			"y": -544
-		},
-		{
-			"_uuid": "a0fdb94e1ab34fa9b5998295293422da",
-			"current_frame": "normal",
-			"custom": true,
-			"label": "_6c8aac95",
-			"type": "seaside_house_2",
-			"x": 2976,
-			"y": -1568
-		},
-		{
-			"_uuid": "1e001d81405d47af9543eccbcc5bd173",
-			"current_frame": "normal",
-			"custom": true,
-			"face_right": false,
-			"label": "_9e1b419",
-			"type": "seaside_house_2",
-			"x": 2432,
-			"y": -1568
 		}
 	],
-	"dimensions": [-768,-1728,4415,575],
+	"dimensions": [-544,-1728,4415,575],
 	"id": "test.cfg",
 	"music": "",
 	"palettes": ["seaside_sunny"],
@@ -75,10 +58,10 @@
 			"unique_tiles": "",
 			"variations": "",
 			"x": 0,
-			"x_speed": 105,
+			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
-			"zorder": "background_parallax_walls"
+			"zorder": "liquid_particle_effects"
 		},
 		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk
@@ -154,7 +137,7 @@
 			"zorder": "interior_solid_ground_tiles"
 		},
 		{
-			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,bdg,bdg,bdg
+			"tiles": ",
 ,
 ,
 ,
@@ -197,7 +180,7 @@
 ,
 ,
 ,",
-			"unique_tiles": ",bdg",
+			"unique_tiles": "",
 			"variations": "",
 			"x": 0,
 			"x_speed": 100,
@@ -244,7 +227,37 @@
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
+			"zorder": "wooden_platform_objects"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
 			"zorder": "player"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "mushrooms_foreground"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "water_surface"
 		}
 	],
 	"title": "",
