--- a/data/level/Unused/Test/test2.cfg
+++ b/data/level/Unused/Test/test2.cfg
@@ -22,38 +22,8 @@
 				}
 			},
 			"type": "frogatto_playable",
-			"x": 1408,
-			"y": -29
-		},
-		{
-			"_uuid": "25b4aacf1ed84fa0861c03378340e771",
-			"current_frame": "normal",
-			"custom": true,
-			"label": "_3c322ee6",
-			"property_data": {
-				"_x2_bound": 1642,
-				"_x_bound": 1392,
-				"_y2_bound": 1674,
-				"_y_bound": 1424
-			},
-			"type": "water_controller",
-			"x": 1492,
-			"y": 1524
-		},
-		{
-			"_uuid": "e5dd1614f2c843908f1093acbccc72c1",
-			"current_frame": "normal",
-			"custom": true,
-			"label": "_3c68e254",
-			"property_data": {
-				"_x2_bound": -574,
-				"_x_bound": -824,
-				"_y2_bound": 1730,
-				"_y_bound": 1480
-			},
-			"type": "water_controller",
-			"x": -724,
-			"y": 1580
+			"x": -192,
+			"y": 512
 		},
 		{
 			"_uuid": "ca1deffadbb24c22b1e6c0bfb75e2780",
@@ -70,12 +40,46 @@
 			"type": "water_controller",
 			"x": 960,
 			"y": 416
+		},
+		{
+			"_uuid": "250a9f7a06e64c9f971ce1449bf8fd58",
+			"activation_border": 448,
+			"current_frame": "fly",
+			"custom": true,
+			"label": "_3c7d47bd",
+			"property_data": {
+				"_desired_height": 373,
+				"_x2_bound": -277,
+				"_x_bound": -725,
+				"original_level_we_spawned_on": "test2.cfg"
+			},
+			"type": "moth_black",
+			"x": -535,
+			"y": 329
+		},
+		{
+			"_uuid": "c9388460231541e1867b5b018d131a95",
+			"activation_border": 448,
+			"current_frame": "fly",
+			"custom": true,
+			"label": "_72c1ea4f",
+			"property_data": {
+				"_desired_height": 368,
+				"_x2_bound": -149,
+				"_x_bound": -597,
+				"original_level_we_spawned_on": "test2.cfg"
+			},
+			"type": "moth_brown",
+			"x": -407,
+			"y": 329
 		}
 	],
 	"dimensions": [-640,-800,3135,1055],
 	"id": "test2.cfg",
 	"music": "",
+	"next_level": "test.cfg",
 	"preloads": "",
+	"previous_level": "test.cfg",
 	"segment_height": 0,
 	"segment_width": 0,
 	"serialized_objects": {
@@ -254,23 +258,11 @@ nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,
 	},
 	"version": "1.4",
 	"water": {
-		"area": [
-			{
-				"color": [0.274509,0.0,0.0,0.196078],
-				"object": "@eval deserialize('25b4aacf1ed84fa0861c03378340e771')",
-				"rect": [1392,1424,1642,1674]
-			},
-			{
-				"color": [0.274509,0.0,0.0,0.196078],
-				"object": "@eval deserialize('e5dd1614f2c843908f1093acbccc72c1')",
-				"rect": [-824,1480,-574,1730]
-			},
-			{
-				"color": [0.274509,0.0,0.0,0.196078],
-				"object": "@eval deserialize('ca1deffadbb24c22b1e6c0bfb75e2780')",
-				"rect": [896,288,1632,416]
-			}
-		],
+		"area": {
+			"color": [0.274509,0.0,0.0,0.196078],
+			"object": "@eval deserialize('ca1deffadbb24c22b1e6c0bfb75e2780')",
+			"rect": [896,288,1632,416]
+		},
 		"zorder": "water"
 	},
 	"water_resistance": 100,
