Hack, fix #634, caused by object references not persisting across levels.
	- transient_object._effects_attaches may contain null values after
	  a level change.

--- a/data/object_prototypes/base/hittable.cfg
+++ b/data/object_prototypes/base/hittable.cfg
@@ -291,7 +291,7 @@ properties: {
 #-------------------------- attache logic --------------------------#
 	graphical_body_parts: "[custom_obj] :: me_and_hittable_attaches",
 	me_and_hittable_attaches: "[obj hittable|obj hittable_attache] :: [me] + _hittable_attaches",
-	_all_attaches: "[obj hittable_attache|obj effects_attache] :: _effects_attaches + _hittable_attaches",
+	_all_attaches: "[obj hittable_attache|obj effects_attache] :: filter(_effects_attaches, value) + _hittable_attaches",
 	
 	handle_grabbed_cleanup: "commands :: map(_all_attaches, remove_object(value))",
 
@@ -334,7 +334,7 @@ properties: {
 			attributes:source_object.attributes,
 			variations: source_object.variations,
 			event_handlers:source_object.event_handlers,
-			_effects_attaches: source_object._effects_attaches,
+			_effects_attaches: filter(source_object._effects_attaches, value),
 			_hittable_attaches: source_object._hittable_attaches,
 			_preexisting_object: true,
 			original_level_we_spawned_on: source_object.original_level_we_spawned_on,
@@ -371,7 +371,7 @@ properties: {
 				[
 					if(not old_obj.currently_forcing_death, [
 						set(old_obj.has_already_been_replaced, true);  //we don't have to worry about unsetting this, because the old object is being deleted
-						map(new_obj._effects_attaches, [
+						map(filter(new_obj._effects_attaches, value), [
 								set(value.recorded_transfer_at, value.cycle + value.time_to_die),
 								set(value.parent, new_obj),
 								value.initialize_position,
@@ -382,7 +382,7 @@ properties: {
 
 
 	remap_my_attaches_to_me: "commands :: [
-											map(me._effects_attaches, [
+											map(filter(me._effects_attaches, value), [
 												set(value.recorded_transfer_at, value.cycle + value.time_to_die),
 												set(value.parent, me),
 												value.initialize_position,
