--- a/data/object_prototypes/base/transient_object.cfg
+++ b/data/object_prototypes/base/transient_object.cfg
@@ -14,14 +14,14 @@ is_strict: true,
 
 properties: {
 #-------------------------- global values --------------------------#
-	_effects_attaches: { type: "[obj effects_attache]", default: [], persistent: false },
+	_effects_attaches: { type: "[obj effects_attache|null]", default: [], persistent: false },
 
 
 
-	_all_attaches: "[obj hittable_attache|obj effects_attache] :: _effects_attaches",
+	_all_attaches: "[obj hittable_attache|obj effects_attache] :: filter(_effects_attaches, value)",
 
 	restore_attache_references: "commands :: [
-		map(me._effects_attaches,
+		map(filter(me._effects_attaches, value),
 			value.possibly_restore_parent_reference
 		)
 	]",
@@ -113,7 +113,7 @@ properties: {
 
 	
 	transient_obj_destructor: "commands :: execute(me,[
-					map(me._effects_attaches, value.schedule_death_cleanup)
+					map(filter(me._effects_attaches, value), value.schedule_death_cleanup)
 				])",
 
 	hittable_obj_destructor: "commands :: null",	//for the hittable prototype
