--- a/data/objects/effects/liquids/whitewater_controller.cfg
+++ b/data/objects/effects/liquids/whitewater_controller.cfg
@@ -13,13 +13,14 @@ properties: {
 	
 #-------------------------- fx objects --------------------------#
 	volume_bubbles: { 
-		type: "obj particle_attache", 
-		init: "object('particle_attache', x,y, {
+		type: "obj particle_attache_slicer", 
+		init: "object('particle_attache_slicer', x,y, {
 			_particle_type:'bubbles_2', //Silence check for this existing. `particles`, which this sets, is overwritten later.
 			parent: me,
 			time_to_die: 0,
 			x:x, y:y,
 			zorder: lib.zorder.get('liquid_particle_effects'),
+			child_system_count: (lib.math.ceil((_x2_bound - _x_bound) / 400.0 ))
 		})",
 		persistent: false,
 	},
@@ -76,40 +77,52 @@ properties: {
 		add_particles('splash_droplets'),
 	]",
 
+	particle_slice_count: "lib.math.ceil(water_width / 200.0 )",
+	water_width: "_x2_bound - _x_bound", //Make the bubbles as wide as the water. 
+
 
 	setup_particles: "[
 		set(volume_bubbles.clip_area, [_x_bound-mid_x, _y_bound-mid_y, _x2_bound - _x_bound, _y2_bound - _y_bound, ]),
 		set(water_churn.clip_area,    [_x_bound-mid_x, _y_bound-mid_y, _x2_bound - _x_bound, _y2_bound - _y_bound, ]),
 		
-		set(volume_bubbles.particles, (
-			raw_particle_system_info + {
-				position: [
-					(_x_bound + _x2_bound)/2 - mid_x, //Horizontal offset of particle system as wide as the water, to handle when the emitter object isn't square within the bounds of the water.
-					_y2_bound - mid_y, //Position the center point (of the box emitter) at the bottom of the body of water.
-					0
-				],
-				fast_forward: (map <- raw_particle_system_info.fast_forward) + {
-					time: bubble_average_lifetime, //Pump the water full of bubbles when we first encounter it.
-				},
-				emitter: (map <- raw_particle_system_info.emitter) + {
-					time_to_live: bubble_average_lifetime, //Make the bubbles live until the top of the water.
-					box_width: _x2_bound - _x_bound, //Make the bubbles as wide as the water. (To position the bubbles, see `position` above.)
-					emission_rate: (map <- (map <- raw_particle_system_info.emitter).emission_rate) + {
-						max: 15 * (_x2_bound - _x_bound) / 20, //Particle density. (Particles per pixel of water surface, divided by 2 on average because random floor is 0.)
-					},
-					scaling: {
-						max: 10.0,
-						min: 1.0,
-						type: 'random',
-					},
-				},
-			} where
-				raw_particle_system_info = 
-					(ParticleSystemInfo <- get_document('data/particles/bubbles_2.cfg')).info,
-				bubble_average_lifetime = 
-					(_y2_bound - _y_bound) / average_vertical_bubble_speed / 60/*fps*/
-					where average_vertical_bubble_speed = 0.7 //as experimentally verified
-		)),
+		map(
+			volume_bubbles.child_systems,
+			set(value.particles,
+				(
+					raw_particle_system_info + {
+						position: [
+							//_x_bound + 200 * index,
+							(_x_bound + _x2_bound)/2 - mid_x, //Horizontal offset of particle system as wide as the water, to handle when the emitter object isn't square within the bounds of the water.
+							_y2_bound - mid_y, //Position the center point (of the box emitter) at the bottom of the body of water.
+							0
+						],
+						fast_forward: (map <- raw_particle_system_info.fast_forward) + {
+							time: bubble_average_lifetime, //Pump the water full of bubbles when we first encounter it.
+						},
+						emitter: (map <- raw_particle_system_info.emitter) + {
+							time_to_live: bubble_average_lifetime, //Make the bubbles live until the top of the water.
+							box_width: 200, //Make the bubbles as wide as the water. (To position the bubbles, see `position` above.)
+							emission_rate: (map <- (map <- raw_particle_system_info.emitter).emission_rate) + {
+								max: 15 * (_x2_bound - _x_bound) / 20, //Particle density. (Particles per pixel of water surface, divided by 2 on average because random floor is 0.)
+							},
+							scaling: {
+								max: 10.0,
+								min: 1.0,
+								type: 'random',
+							},
+						},
+					} where
+						raw_particle_system_info = 
+							(ParticleSystemInfo <- get_document('data/particles/bubbles_2.cfg')).info,
+						bubble_average_lifetime = 
+							(_y2_bound - _y_bound) / average_vertical_bubble_speed / 60/*fps*/
+							where average_vertical_bubble_speed = 0.7 //as experimentally verified
+
+
+						
+				)
+			)
+		),
 
 		
 		set(water_churn.particles, (
