Hooked up the particle spawners to actually spawn the child particles.

--- a/data/objects/effects/liquids/whitewater_controller.cfg
+++ b/data/objects/effects/liquids/whitewater_controller.cfg
@@ -71,10 +71,10 @@ properties: {
 
 	add_particle_effect: "[
 		add_object(volume_bubbles),
-		add_object(water_churn),
-		add_particles('fizz'),
-		add_particles('splash'),
-		add_particles('splash_droplets'),
+		//add_object(water_churn),
+		//add_particles('fizz'),
+		//add_particles('splash'),
+		//add_particles('splash_droplets'),
 	]",
 
 	particle_slice_count: "lib.math.ceil(water_width / 200.0 )",
