--- a/data/level/Unused/Test/test-liquids-mini-whitewater.cfg
+++ b/data/level/Unused/Test/test-liquids-mini-whitewater.cfg
@@ -22,7 +22,7 @@
 				}
 			},
 			"type": "frogatto_playable",
-			"x": 992,
+			"x": -1280,
 			"y": 96
 		},
 		{
@@ -32,9 +32,9 @@
 			"custom": true,
 			"label": "_68eb8913",
 			"property_data": {
-				"_x2_bound": 500,
+				"_x2_bound": -500,
 				"_x_bound": -1792,
-				"_y2_bound": 2592,
+				"_y2_bound": 592,
 				"_y_bound": 208
 			},
 			"type": "whitewater_controller",
@@ -175,13 +175,11 @@ nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,
 	},
 	"version": "1.4",
 	"water": {
-		"area": [
-			{
-				"color": [0.549019,0.0,0.0,0.274509],
-				"object": "@eval deserialize('7d5515c56c4545e1a8c7c1d3c3aeb167')",
-				"rect": [-1792,208,896,592]
-			}
-		],
+		"area": {
+			"color": [0.549018,0.0,0.0,0.274509],
+			"object": "@eval deserialize('7d5515c56c4545e1a8c7c1d3c3aeb167')",
+			"rect": [-1792,208,896,592]
+		},
 		"zorder": "water"
 	},
 	"water_resistance": 100,
