A mostly-functional implementation of particle slicing.

--- a/data/objects/effects/attaches/particle_attache_slicer.cfg
+++ b/data/objects/effects/attaches/particle_attache_slicer.cfg
@@ -6,22 +6,29 @@ zorder: "@include data/zorder.cfg:near_player_foreground_effects",
 
 
 properties: {
-	child_systems: {
-		type: "[obj particle_attache]",
-		default: [],
-		persistent: false,
-	},
+	child_systems: "
+		map(
+			range(child_system_count),
+			object('particle_attache', x,y, {
+				_particle_type: _particle_type,
+				parent: me,
+				time_to_die: 0,
+				x:x, y:y,
+		//		zorder: me.zorder,
+			})
+		)",
+
+	active_child_systems: "[obj particle_attache] :: filter(me._effects_attaches, value is obj particle_attache)",
 
 #-------------------------- effects_attache overrides --------------------------#
 	do_setup: "execute(me, [
 					initialize_position,
-					create_children(child_system_count),
 				])",
 
 
 	
-	turn_off: "map(child_systems, value.turn_off)",
-	turn_on: "map(child_systems, value.turn_on)",
+	turn_off: "map(active_child_systems, value.turn_off)",
+	turn_on: "map(active_child_systems, value.turn_on)",
 
 #-------------------------- vars --------------------------#
 	_particle_type: {
@@ -34,29 +41,14 @@ properties: {
 		default: 0,
 		set: "[
 			set(_data, value),
-			create_children(value)
+
+			remove_attaches_from_level(me)
+			;
+			map(child_systems, 'child', add_object(child))
 		]",
 	},
 
-#-------------------------- special setup commands --------------------------#
-	create_children: "def(int number_of_systems) -> commands 
-	[
-		debug(number_of_systems),
-		set(child_systems, 
-			map(
-				range(number_of_systems),
-				object('particle_attache', x,y, {
-					_particle_type: _particle_type,
-					parent: me,
-					time_to_die: 0,
-					x:x, y:y,
-					zorder: me.zorder,
-				})
-			)
-		)
-		;
-		map(child_systems, add_object(value))
-	]",
+
 }
 
 
