--- a/data/object_prototypes/general/liquid.cfg
+++ b/data/object_prototypes/general/liquid.cfg
@@ -47,6 +47,10 @@ properties: {
 	remove_water_effect: "commands :: remove_water(_x_bound, _y_bound, _x2_bound, _y2_bound)",
 
 
+	
+	water_width: "_x2_bound - _x_bound",
+	water_height: "_y2_bound - _y_bound",
+
 
 #-------------------------- constructors --------------------------#
 	transient_obj_constructor: "commands :: [
@@ -57,6 +61,10 @@ properties: {
 
 
 	liquid_prototype_constructor: "commands :: [
+		set(me.mid_x, _x_bound + water_width/2),
+		set(me.mid_y, _y_bound + water_height/2),
+		;
+
 		add_particle_effect,
 		add_object(liquid_surface),
 		fire_event(liquid_surface, 'create'),
