--- a/data/objects/effects/liquids/whitewater_controller.cfg
+++ b/data/objects/effects/liquids/whitewater_controller.cfg
@@ -2,7 +2,7 @@
 id: "whitewater_controller",
 prototype: ["liquid"],
 zorder: "@include data/zorder.cfg:in_front_of_everything",
-
+hidden_in_game: false,
 properties: {
 	liquid_texture: "string :: 'liquids/whitewater-overlay.png'",
 	liquid_damage: "kill_anything",
@@ -20,7 +20,7 @@ properties: {
 			time_to_die: 0,
 			x:x, y:y,
 			zorder: lib.zorder.get('liquid_particle_effects'),
-			child_system_count: (lib.math.ceil((_x2_bound - _x_bound) / 400.0 ))
+			child_system_count: (lib.math.ceil((_x2_bound - _x_bound) / 300.0 ))
 		})",
 		persistent: false,
 	},
@@ -58,6 +58,8 @@ properties: {
 
 #-------------------------- constructors --------------------------#
 	liquid_obj_constructor: "commands :: [
+
+
 		add_particle_effect ;
 		setup_particles ;
 		[
@@ -77,22 +79,42 @@ properties: {
 		//add_particles('splash_droplets'),
 	]",
 
-	particle_slice_count: "lib.math.ceil(water_width / 200.0 )",
-	water_width: "_x2_bound - _x_bound", //Make the bubbles as wide as the water. 
+
+	slice_threshold: "decimal :: 300.0",
+	slice_count: "decimal :: lib.math.ceil(water_width / slice_threshold )",
+	slice_width: "decimal :: water_width / slice_count",
+
 
 
 	setup_particles: "[
-		set(volume_bubbles.clip_area, [_x_bound-mid_x, _y_bound-mid_y, _x2_bound - _x_bound, _y2_bound - _y_bound, ]),
+
+
 		set(water_churn.clip_area,    [_x_bound-mid_x, _y_bound-mid_y, _x2_bound - _x_bound, _y2_bound - _y_bound, ]),
 		
+
 		map(
-			volume_bubbles.child_systems,
+			volume_bubbles.active_child_systems,
+			set(value.clip_area, [_x_bound-mid_x, _y_bound-mid_y, _x2_bound - _x_bound, _y2_bound - _y_bound, ]),
+		),
+		
+
+		map(
+			volume_bubbles.active_child_systems,
+			[
+				set(value.relative_x,  -(water_width / 2) + (slice_width * index) + (slice_width/2)),
+				set(value.activation_border,  slice_width),
+			]
+		),
+		;
+		map(
+			volume_bubbles.active_child_systems,
 			set(value.particles,
 				(
 					raw_particle_system_info + {
 						position: [
-							//_x_bound + 200 * index,
-							(_x_bound + _x2_bound)/2 - mid_x, //Horizontal offset of particle system as wide as the water, to handle when the emitter object isn't square within the bounds of the water.
+							0,//slice_width - value.mid_x,
+
+							//(_x_bound + _x2_bound)/2 - mid_x, //Horizontal offset of particle system as wide as the water, to handle when the emitter object isn't square within the bounds of the water.
 							_y2_bound - mid_y, //Position the center point (of the box emitter) at the bottom of the body of water.
 							0
 						],
@@ -101,9 +123,9 @@ properties: {
 						},
 						emitter: (map <- raw_particle_system_info.emitter) + {
 							time_to_live: bubble_average_lifetime, //Make the bubbles live until the top of the water.
-							box_width: 200, //Make the bubbles as wide as the water. (To position the bubbles, see `position` above.)
+							box_width: slice_width, //Make the bubbles as wide as the water. (To position the bubbles, see `position` above.)
 							emission_rate: (map <- (map <- raw_particle_system_info.emitter).emission_rate) + {
-								max: 15 * (_x2_bound - _x_bound) / 20, //Particle density. (Particles per pixel of water surface, divided by 2 on average because random floor is 0.)
+								max: (15 * (_x2_bound - _x_bound) / 20) / slice_count, //Particle density. (Particles per pixel of water surface, divided by 2 on average because random floor is 0.)
 							},
 							scaling: {
 								max: 10.0,
