Some work towards restoring the whitewater particle systems; enabled slicing on the churn particles.

--- a/data/objects/effects/attaches/particle_attache_slicer.cfg
+++ b/data/objects/effects/attaches/particle_attache_slicer.cfg
@@ -14,7 +14,7 @@ properties: {
 				parent: me,
 				time_to_die: 0,
 				x:x, y:y,
-		//		zorder: me.zorder,
+				zorder: me.zorder,
 			})
 		)",
 
