--- a/data/objects/effects/liquids/whitewater_controller.cfg
+++ b/data/objects/effects/liquids/whitewater_controller.cfg
@@ -25,13 +25,14 @@ properties: {
 		persistent: false,
 	},
 	water_churn: { 
-		type: "obj particle_attache", 
-		init: "object('particle_attache', x,y, {
+		type: "obj particle_attache_slicer", 
+		init: "object('particle_attache_slicer', x,y, {
 			_particle_type:'whitewater_churn_bubbles', //Silence check for this existing. `particles`, which this sets, is overwritten later.
 			parent: me,
 			time_to_die: 0,
 			x:x, y:y,
 			zorder: lib.zorder.get('liquid_particle_effects'),
+			child_system_count: (lib.math.ceil((_x2_bound - _x_bound) / 300.0 ))
 		})",
 		persistent: false,
 	},
@@ -73,7 +74,7 @@ properties: {
 
 	add_particle_effect: "[
 		add_object(volume_bubbles),
-		//add_object(water_churn),
+		add_object(water_churn),
 		//add_particles('fizz'),
 		//add_particles('splash'),
 		//add_particles('splash_droplets'),
@@ -96,8 +97,6 @@ properties: {
 			volume_bubbles.active_child_systems,
 			set(value.clip_area, [_x_bound-mid_x, _y_bound-mid_y, _x2_bound - _x_bound, _y2_bound - _y_bound, ]),
 		),
-		
-
 		map(
 			volume_bubbles.active_child_systems,
 			[
@@ -112,9 +111,7 @@ properties: {
 				(
 					raw_particle_system_info + {
 						position: [
-							0,//slice_width - value.mid_x,
-
-							//(_x_bound + _x2_bound)/2 - mid_x, //Horizontal offset of particle system as wide as the water, to handle when the emitter object isn't square within the bounds of the water.
+							0,
 							_y2_bound - mid_y, //Position the center point (of the box emitter) at the bottom of the body of water.
 							0
 						],
@@ -139,32 +136,49 @@ properties: {
 						bubble_average_lifetime = 
 							(_y2_bound - _y_bound) / average_vertical_bubble_speed / 60/*fps*/
 							where average_vertical_bubble_speed = 0.7 //as experimentally verified
-
-
-						
 				)
 			)
 		),
 
-		
-		set(water_churn.particles, (
-			raw_particle_system_info + {
-				position: [
-					(_x_bound + _x2_bound)/2 - mid_x, //Horizontal offset of particle system as wide as the water, to handle when the emitter object isn't square within the bounds of the water.
-					-(_y_bound - mid_y), //Position the center point (of the box emitter) at the top of the body of water. Less 4px to float on top of water surface.
-					0
-				],
-				emitter: (map <- raw_particle_system_info.emitter) + {
-					box_width: _x2_bound - _x_bound - 64*2, //Make the bubbles as wide as the water. (To position the bubbles, see `position` above.) Less 64px for fade in/out margins.
-					box_height: 18, //Make the bubbles as tall as the surface strip of water.
-					emission_rate: (map <- (map <- raw_particle_system_info.emitter).emission_rate) + {
-						max: (_x2_bound - _x_bound) / 125, //Particle density. (Particles per pixel of water surface, divided by 2 on average because random floor is 0.)
-					}
-				},
-			} where
-				raw_particle_system_info = 
-					(ParticleSystemInfo <- get_document('data/particles/whitewater_churn_bubbles.cfg')).info
-		)),
+		;
+
+		map(
+			water_churn.active_child_systems,
+			set(value.clip_area, [_x_bound-mid_x, _y_bound-mid_y, _x2_bound - _x_bound, _y2_bound - _y_bound, ]),
+		),
+		map(
+			water_churn.active_child_systems,
+			[
+				set(value.relative_x,  -(water_width / 2) + (slice_width * index) + (slice_width/2)),
+				set(value.activation_border,  slice_width),
+			]
+		),
+		;
+		map(
+			water_churn.active_child_systems,
+			set(value.particles,
+				(
+					raw_particle_system_info + {
+						position: [
+							0,
+							-(_y_bound - mid_y), //Position the center point (of the box emitter) at the top of the body of water. Less 4px to float on top of water surface.
+							0
+						],
+						emitter: (map <- raw_particle_system_info.emitter) + {
+							box_width: slice_width, //Make the bubbles as wide as the water. (To position the bubbles, see `position` above.) Less 64px for fade in/out margins.
+							box_height: 18, //Make the bubbles as tall as the surface strip of water.
+							emission_rate: (map <- (map <- raw_particle_system_info.emitter).emission_rate) + {
+								max: ((_x2_bound - _x_bound) / 125) / slice_count, //Particle density. (Particles per pixel of water surface, divided by 2 on average because random floor is 0.)
+							}
+						},
+
+					} where
+						raw_particle_system_info = 
+							(ParticleSystemInfo <- get_document('data/particles/whitewater_churn_bubbles.cfg')).info
+				)
+			)
+		),
+
 
 
 		if(particle_systems['fizz'], [
