--- a/data/objects/effects/attaches/particle_attache_slicer.cfg
+++ b/data/objects/effects/attaches/particle_attache_slicer.cfg
@@ -25,6 +25,27 @@ properties: {
 					initialize_position,
 				])",
 
+	activation_rectangle_size: {
+		type: "{w: int, h: int}",
+		set: "[
+			set(_data, value),
+			;
+			map(
+				child_systems,
+				'sys',
+				[set(sys.activation_area, dump([
+					sys.mid_x - value.w/2 - 150,
+					sys.mid_y - value.h/2 - 150,
+					sys.mid_x + value.w/2 + 150,
+					sys.mid_y + value.h/2 + 150
+				])),
+				debug(sys.relative_x)
+				]
+			)
+		]",
+		default: {w: 100, h: 100},
+	},
+
 
 	
 	turn_off: "map(active_child_systems, value.turn_off)",
