--- a/data/objects/effects/liquids/whitewater_controller.cfg
+++ b/data/objects/effects/liquids/whitewater_controller.cfg
@@ -100,9 +100,10 @@ properties: {
 		map(
 			volume_bubbles.active_child_systems,
 			[
-				set(value.relative_x,  -(water_width / 2) + (slice_width * index) + (slice_width/2)),
+				set(value.relative_x, dump( -(water_width / 2) + (slice_width * index) + (slice_width/2))),
 				set(value.activation_border,  slice_width),
-			]
+				set(volume_bubbles.activation_rectangle_size, {w: lib.math.round(slice_width), h: lib.math.round(abs(_y2_bound - _y_bound))}),
+			] 
 		),
 		;
 		map(
@@ -139,6 +140,8 @@ properties: {
 				)
 			)
 		),
+//		;
+//		schedule(1, bind_command( def() set(volume_bubbles.activation_rectangle_size, {w: lib.math.round(slice_width), h: lib.math.round(abs(_y2_bound - _y_bound))})) )
 
 		;
 
