Give up on setting the activation area -through- the particle_attache_slicer, and instead set it directly through the water controller.

--- a/data/objects/effects/liquids/whitewater_controller.cfg
+++ b/data/objects/effects/liquids/whitewater_controller.cfg
@@ -100,10 +100,17 @@ properties: {
 		map(
 			volume_bubbles.active_child_systems,
 			[
-				set(value.relative_x, dump( -(water_width / 2) + (slice_width * index) + (slice_width/2))),
+				set(value.relative_x,  new_relative_x ),
 				set(value.activation_border,  slice_width),
-				set(volume_bubbles.activation_rectangle_size, {w: lib.math.round(slice_width), h: lib.math.round(abs(_y2_bound - _y_bound))}),
-			] 
+				set(value.activation_area, new_activation_rectangle ),
+			]
+				where new_activation_rectangle = [
+					volume_bubbles.mid_x - new_relative_x - value.w/2 - 150,
+					volume_bubbles.mid_y - value.h/2 - 150,
+					volume_bubbles.mid_x + new_relative_x + value.w/2 + 150,
+					volume_bubbles.mid_y + value.h/2 + 150
+				]
+				where new_relative_x = (-(water_width / 2) + (slice_width * index) + (slice_width/2))
 		),
 		;
 		map(
@@ -140,8 +147,6 @@ properties: {
 				)
 			)
 		),
-//		;
-//		schedule(1, bind_command( def() set(volume_bubbles.activation_rectangle_size, {w: lib.math.round(slice_width), h: lib.math.round(abs(_y2_bound - _y_bound))})) )
 
 		;
 
