Re-enabled the remaining particle systems for the whitewater, gave the churn particles an appropriate spawn area, and figured out some black magic that enables the water surface to actually wobble with the shader.

--- a/data/objects/effects/liquids/whitewater_controller.cfg
+++ b/data/objects/effects/liquids/whitewater_controller.cfg
@@ -75,9 +75,9 @@ properties: {
 	add_particle_effect: "[
 		add_object(volume_bubbles),
 		add_object(water_churn),
-		//add_particles('fizz'),
-		//add_particles('splash'),
-		//add_particles('splash_droplets'),
+		add_particles('fizz'),
+		add_particles('splash'),
+		add_particles('splash_droplets'),
 	]",
 
 
@@ -130,7 +130,7 @@ properties: {
 							time_to_live: bubble_average_lifetime, //Make the bubbles live until the top of the water.
 							box_width: slice_width, //Make the bubbles as wide as the water. (To position the bubbles, see `position` above.)
 							emission_rate: (map <- (map <- raw_particle_system_info.emitter).emission_rate) + {
-								max: (15 * (_x2_bound - _x_bound) / 20) / slice_count, //Particle density. (Particles per pixel of water surface, divided by 2 on average because random floor is 0.)
+								max: (10 * (_x2_bound - _x_bound) / 20) / slice_count, //Particle density. (Particles per pixel of water surface, divided by 2 on average because random floor is 0.)
 							},
 							scaling: {
 								max: 10.0,
@@ -157,10 +157,20 @@ properties: {
 		map(
 			water_churn.active_child_systems,
 			[
-				set(value.relative_x,  -(water_width / 2) + (slice_width * index) + (slice_width/2)),
+				set(value.relative_x,  new_relative_x ),
 				set(value.activation_border,  slice_width),
+				set(value.activation_area, new_activation_rectangle ),
 			]
+				where new_activation_rectangle = [
+					water_churn.mid_x - new_relative_x - value.w/2 - 150,
+					water_churn.mid_y - value.h/2 - 150,
+					water_churn.mid_x + new_relative_x + value.w/2 + 150,
+					water_churn.mid_y + value.h/2 + 150
+				]
+				where new_relative_x = (-(water_width / 2) + (slice_width * index) + (slice_width/2))
 		),
+
+
 		;
 		map(
 			water_churn.active_child_systems,
@@ -404,7 +414,7 @@ object_type: [
 			x: 0,
 			w: 128,
 			y: 0,
-			h: 16,
+			h: 32,
 		},
 	},
 
