Committing a horrible, work-in-progress effort to try to put the boundary logic in the particle slicer itself, and we've botched the clip_area stuff.

--- a/data/object_prototypes/general/liquid.cfg
+++ b/data/object_prototypes/general/liquid.cfg
@@ -48,8 +48,9 @@ properties: {
 
 
 	
-	water_width: "_x2_bound - _x_bound",
-	water_height: "_y2_bound - _y_bound",
+	water_width: "abs(_x2_bound - _x_bound)",
+	water_height: "abs(dump(_y2_bound) - dump(_y_bound))",
+	water_boundaries: "[int,int,int,int] :: [_x_bound, _y_bound, _x2_bound, _y2_bound]",
 
 
 #-------------------------- constructors --------------------------#
