--- a/data/objects/effects/attaches/particle_attache.cfg
+++ b/data/objects/effects/attaches/particle_attache.cfg
@@ -2,7 +2,7 @@
 id: "particle_attache",
 prototype: ["effects_attache"],
 zorder: "@include data/zorder.cfg:near_player_foreground_effects",
-
+always_active: true,
 
 
 properties: {
