--- a/data/objects/effects/liquids/water_controller_ocean.cfg
+++ b/data/objects/effects/liquids/water_controller_ocean.cfg
@@ -12,14 +12,19 @@ properties: {
 
 #-------------------------- fx objects --------------------------#
 	volume_bubbles: { 
-		type: "obj particle_attache", 
-		init: "object('particle_attache', x,y, {
+		type: "obj particle_attache_slicer", 
+		init: "object('particle_attache_slicer', x,y, {
 			_particle_type:'bubbles_2', //Silence check for this existing. `particles`, which this sets, is overwritten later.
 			parent: me,
 			time_to_die: 0,
 			x:x, y:y,
 			zorder: lib.zorder.get('liquid_particle_effects'),
-		})",
+			child_system_count: (lib.math.ceil((_x2_bound - _x_bound) / 300.0 )),
+			slice_width: water_width / (lib.math.ceil((_x2_bound - _x_bound) / 300.0 )),
+			water_width: water_width,
+			water_height: water_height,
+			water_boundaries: water_boundaries,
+		})",//abs(_x2_bound - _x_bound)
 		persistent: false,
 	},
 
@@ -68,32 +73,61 @@ properties: {
 		add_object(volume_bubbles),
 	]",
 
+	slice_threshold: "decimal :: 300.0",
+	slice_count: "decimal :: lib.math.ceil(water_width / slice_threshold )",
+	slice_width: "decimal :: water_width / slice_count",
+
 	setup_particles: "[
-		set(volume_bubbles.clip_area, [_x_bound-mid_x, _y_bound-mid_y, _x2_bound - _x_bound, _y2_bound - _y_bound, ]),
-		set(volume_bubbles.particles, (
-			raw_particle_system_info + {
-				position: [
-					(_x_bound + _x2_bound)/2 - mid_x, //Horizontal offset of particle system as wide as the water, to handle when the emitter object isn't square within the bounds of the water.
-					_y2_bound - mid_y, //Position the center point (of the box emitter) at the bottom of the body of water.
-					0
-				],
-				fast_forward: (map <- raw_particle_system_info.fast_forward) + {
-					time: bubble_average_lifetime, //Pump the water full of bubbles when we first encounter it.
-				},
-				emitter: (map <- raw_particle_system_info.emitter) + {
-					time_to_live: bubble_average_lifetime, //Make the bubbles live until the top of the water.
-					box_width: _x2_bound - _x_bound, //Make the bubbles as wide as the water. (To position the bubbles, see `position` above.)
-					emission_rate: (map <- (map <- raw_particle_system_info.emitter).emission_rate) + {
-						max: (_x2_bound - _x_bound) / 20, //Particle density. (Particles per pixel of water surface, divided by 2 on average because random floor is 0.)
-					}
-				},
-			} where
-				raw_particle_system_info = 
-					(ParticleSystemInfo <- get_document('data/particles/bubbles_2.cfg')).info,
-				bubble_average_lifetime = 
-					(_y2_bound - _y_bound) / average_vertical_bubble_speed / 60/*fps*/
-					where average_vertical_bubble_speed = 0.65 //as experimentally verified ([DDR 2020-40-24] 0.6 is actually more proper, but I like the bubbles disappearing before they hit the surface sometimes.)
-		)),
+		/*map(
+			volume_bubbles.active_child_systems,
+			set(value.clip_area, [_x_bound-mid_x, _y_bound-mid_y, _x2_bound - _x_bound, _y2_bound - _y_bound, ]),
+		),*/
+		/*map(
+			volume_bubbles.active_child_systems,
+			[
+				set(value.relative_x,  new_relative_x ),
+				set(value.activation_border,  slice_width),
+				set(value.activation_area, new_activation_rectangle ),
+				set(value.clip_area, new_activation_rectangle)
+			]
+				where new_activation_rectangle = [
+					lib.math.round( volume_bubbles.mid_x - new_relative_x - value.w/2 - 0 ),
+					lib.math.round( volume_bubbles.mid_y - value.h/2 - 0 ),
+					lib.math.round( volume_bubbles.mid_x + new_relative_x + value.w/2 + 0 ),
+					lib.math.round( volume_bubbles.mid_y + value.h/2 + 0 )
+				]
+				where new_relative_x = (-(water_width / 2) + (slice_width * index) + (slice_width/2))
+		),*/
+		;
+		map(
+			volume_bubbles.active_child_systems,
+			set(value.particles,
+				(
+					raw_particle_system_info + {
+						position: [
+							0,
+							_y2_bound - mid_y, //Position the center point (of the box emitter) at the bottom of the body of water.
+							0
+						],
+						fast_forward: (map <- raw_particle_system_info.fast_forward) + {
+							time: bubble_average_lifetime, //Pump the water full of bubbles when we first encounter it.
+						},
+						emitter: (map <- raw_particle_system_info.emitter) + {
+							time_to_live: bubble_average_lifetime, //Make the bubbles live until the top of the water.
+							box_width: slice_width, //Make the bubbles as wide as the water. (To position the bubbles, see `position` above.)
+							emission_rate: (map <- (map <- raw_particle_system_info.emitter).emission_rate) + {
+								max: ((_x2_bound - _x_bound) / 20) / slice_count, //Particle density. (Particles per pixel of water surface, divided by 2 on average because random floor is 0.)
+							},
+						},
+					} where
+						raw_particle_system_info = 
+							(ParticleSystemInfo <- get_document('data/particles/bubbles_2.cfg')).info,
+						bubble_average_lifetime = 
+							(_y2_bound - _y_bound) / average_vertical_bubble_speed / 60/*fps*/
+							where average_vertical_bubble_speed = 0.65 //as experimentally verified ([DDR 2020-40-24] 0.6 is actually more proper, but I like the bubbles disappearing before they hit the surface sometimes.)
+				)
+			)
+		),
 	]",
 },
 
